--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mint-ui": "^2.2.12",
     "moment": "^2.19.3",
     "vue": "^2.5.9",
+    "vue-preview": "^1.0.5",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
