--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --progress --config webpack.config.dev.js --open --port 6008 --hot"
+    "dev": "webpack-dev-server --progress --config webpack.config.dev.js --open --host 192.168.191.1 --port 6008 --hot ",
+    "build": "webpack --progress --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,13 @@
     "vue": "^2.5.9",
     "vue-preview": "^1.0.5",
     "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
