--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "Vueproject",
+  "name": "szhmqd12",
   "version": "1.0.0",
-  "description": "",
+  "description": "这是深圳黑马12期的项目",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --progress --config webpack.config.dev.js --open --host 192.168.191.1 --port 6008 --hot ",
+    "dev": "webpack-dev-server --progress --config webpack.config.dev.js --open --host 192.168.15.68 --port 6008 --hot",
     "build": "webpack --progress --config webpack.config.prod.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
+    "jquery": "^3.2.1",
     "mint-ui": "^2.2.12",
     "moment": "^2.19.3",
     "vue": "^2.5.9",
@@ -23,11 +24,15 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "vue-loader": "^13.5.0",
     "vue-template-compiler": "^2.5.9",
     "webpack": "^3.8.1",
